# egui_player

./: .gitignore  Cargo.toml  README.md
examples/: main.rs
src/: lib.rs  media_information.rs  player.rs
