[package]
name = "egui_player"
version = "0.1.0"
edition = "2024"
exclude = [
    "assets/*",
    "examples/*",
]
repository = "https://github.com/AravDesai/egui-player"
license = "Unlicense"
description = "A player for rust using egui. Currently audio playback and transcription are supported"

[dependencies]
eframe = "0.31"
mp3-duration = "0.1.10"
kalosm-sound = "0.4.0"
futures-util = "0.3.31"
rodio = {version = "0.20.1", features = ["symphonia-all"]}
tokio = { version = "1.45.1", features = ["full"] }

[dev-dependencies]
rfd = "0.15.0"